<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/side_nav"
    android:visibility="invisible"
    android:background="@color/purple_500">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/merchandise"
        android:id="@+id/i_merchandise"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/about"
        android:id="@+id/i_about"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/logout"
        android:id="@+id/i_logout"/>
</LinearLayout>